--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Apps#index</h1>
-<p>Find me in app/views/apps/index.html.erb</p>
+<% @apps.each do |app| %>
+<h3><%= app.name %></h3>
+<%= link_to 'view app', app %>
+<% end %>
