--- a/app/views/apps/new.html.erb
+++ b/app/views/apps/new.html.erb
@@ -1,2 +1,14 @@
 <h1>Apps#new</h1>
-<p>Find me in app/views/apps/new.html.erb</p>
+<%= form_for @app do |f| %>
+<div class="form-group">
+  <%= f.label :name %>
+  <%= f.text_field :name, class: 'form-control', placeholder: "Enter Application Title..." %>
+</div>
+<div class="form-group">
+  <%= f.label :url %>
+  <%= f.text_field :url, rows: 8, class: 'form-control', placeholder: "Enter Application URL..." %>
+</div>
+<div class="form-group">
+  <%= f.submit "Save", class: 'btn btn-success' %>
+</div>
+<% end %>
